Fix checkbox help alignment, add theme support for YUI modals

--- a/war/src/main/less/base/yui-compatibility.less
+++ b/war/src/main/less/base/yui-compatibility.less
@@ -216,3 +216,8 @@ div.yahooTree td {
     display: inline-block;
   }
 }
+
+.yui-panel,
+.yui-panel .bd {
+  background-color: var(--background) !important;
+}
